# gcp-chirp

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
agents/skills/gemini/: SKILL.md
conductor/: tracks.md
src/gcp_chirp/: cli.py  config.py  tts.py
src/googlecloud_chirp/: cli.py  config.py
tests/: test_cli.py  test_config.py  test_tts.py
