[project]
name = "googlecloud-chirp"
version = "0.1.0"
description = "CLI tool for Google Cloud TTS Chirp 3 HD voices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-texttospeech>=2.34.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "typer>=0.24.0",
]

[project.scripts]
googlecloud-chirp = "googlecloud_chirp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
